Git_WGBH_QC/src/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Assessment__c</fullName>
        <description>Assessment of the Candidate.</description>
        <inlineHelpText>Assessment of the Candidate for the position.</inlineHelpText>
        <label>Assessment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <formula>HYPERLINK( Job_Application__r.Candidate__r.Id , Job_Application__r.Candidate__r.First_Name__c &amp; &quot; &quot; &amp; Job_Application__r.Candidate__r.Last_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>/*Job_Application__r.Position__r.Name*/
HYPERLINK(Job_Application__r.Position__c, Text( Job_Application__r.Position__r.Title__c) &amp;&quot;, &quot; &amp;Text(  Job_Application__r.Position__r.Functional_Area__c )  ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>Enter a 1-5 rating of the candidate (1- lowest, 5- highest).</inlineHelpText>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assessment__c</columns>
        <columns>Candidate__c</columns>
        <columns>Job_Application__c</columns>
        <columns>Position__c</columns>
        <columns>Rating__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <recordTypes>
        <fullName>non_tech_manager_record_type</fullName>
        <active>true</active>
        <label>non tech manager record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>tech_manager_record_type</fullName>
        <active>true</active>
        <label>tech manager record type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_Scale_Rule</fullName>
        <active>true</active>
        <description>Ratings start at 1 and go to 5, 5 being the best rating.</description>
        <errorConditionFormula>(Rating__c &lt; 1) || (Rating__c &gt; 5)</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Rating must be between 1 and 5, 5 being the highest</errorMessage>
    </validationRules>
</CustomObject>